@@ -155,6 +155,7 @@ setup(name=name,
         'Levenshtein': ['python-Levenshtein'],
         'BCrypt': ['passlib[bcrypt]'],
         'html2text': ['html2text'],
+        'weasyprint': ['weasyprint'],
         'coroutine': ['gevent>=1.1'],
         },
     zip_safe=False,
